--- a/Tests/fixtures/smartphone-23.yml
+++ b/Tests/fixtures/smartphone-23.yml
@@ -3743,3 +3743,39 @@
     model: Y60s
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.0; SH-H01) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/86.0.4240.198 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 86.0.4240.198
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Sharp
+    model: Aquos Zeta
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.1.1; GIONEE F205) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.66 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 7.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 90.0.4430.66
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Gionee
+    model: F205
+  os_family: Android
+  browser_family: Chrome
