--- a/Tests/fixtures/tv-1.yml
+++ b/Tests/fixtures/tv-1.yml
@@ -449,3 +449,39 @@
     model: "213"
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.2; TOUCAN NANO 4K) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/75.0.3770.101 Safari/537.36
+  os:
+    name: Android
+    version: 4.4.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 75.0.3770.101
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: IconBIT
+    model: Toucan Nano 4K
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.2; TOUCAN Stick 4K) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/80.0.3987.40 Safari/537.36
+  os:
+    name: Android
+    version: 4.4.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 80.0.3987.40
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: IconBIT
+    model: Toucan Stick 4K
+  os_family: Android
+  browser_family: Chrome
