--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4670,10 +4670,10 @@ Dell:
   models:
     - regex: 'XCD35'
       model: 'XCD35'
-    - regex: 'Venue (8 7840|10 7040|8 3830)'
+    - regex: 'Venue ((?:10|[78]) [0-9]{4}|[78] HSPA\+)'
       model: 'Venue $1'
       device: 'tablet'
-    - regex: '(?:Dell )?Venue Build'
+    - regex: '(?:Dell )?Venue(?: Build|[);])'
       model: 'Venue'
     - regex: 'Dell; Venue Pro'
       model: 'Venue Pro'
@@ -4731,7 +4731,7 @@ DEXP:
       model: '5.85" AS260'
       device: 'phablet'
 
-    - regex: 'Ursus ([^;/)]+)(?: Build|\))'
+    - regex: 'Ursus[ _]([^;/)]+)(?: Build|[);])'
       model: 'Ursus $1'
       device: 'tablet'
     - regex: '(VA[21]10|VA170|E210|R110|N280i|P380i|P510|S280|H170|L2[17]0)(?:[);/ ]|$)'
@@ -4944,13 +4944,15 @@ DoCoMo:
 
 # Doogee
 Doogee:
-  regex: 'DOOGEE[ _-]|Valencia2_Y100_?(?:pro|plus)|Y100_Plus|X5max(?:[_ ]PRO)?|Shoot_[12]|x5_doogee|(KISSME|BIGBOY|COLLO[23]?|DAGGER|DISCOVERY2?|FIND|HOTWIND|LATTE|MAX|MINT|MOON|PIXELS|RAINBOX|TURBO|VALENCIA|VOYAGER2?|TITANS2?)[ -_](DG[0-9]+C?)(?:[);/ ]|$)|(?:BL12000|BL5500[_ ]Lite|X9 Mini|LEO_DG280|Y9Plus|Hitman_DG850|S(?:[568]8|9[056]|59|40)Pro|X95Pro|S40Lite|BL[579]000|N20Pro|(?<!Lenovo )S90C|Ibiza_F2)(?:[);/ ]|$)'
+  regex: 'DOOGEE[ _-]|Valencia2_Y100(?:_?(?:pro|plus))?|Y100_Plus|X5max(?:[_ ]PRO)?|Shoot_[12]|x5_doogee|(KISSME|BIGBOY|COLLO[23]?|DAGGER|DISCOVERY2?|FIND|HOTWIND|LATTE|MAX|MINT|MOON|PIXELS|RAINBOX|TURBO|VALENCIA|VOYAGER2?|TITANS2?)[ -_](DG[0-9]+C?)(?:[);/ ]|$)|(?:BL12000|BL5500[_ ]Lite|X9 Mini|LEO_DG280|Y9Plus|Hitman_DG850|S(?:[568]8|9[056]|59|40)Pro|X95Pro|S40Lite|BL[579]000|N20Pro|(?<!Lenovo )S90C|Ibiza_F2)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(?:Valencia2_)?Y100_Plus(?:[);/ ]|$)'
       model: 'Valencia2 Y100 Plus'
     - regex: 'Valencia2_Y100pro'
       model: 'Valencia2 Y100 Pro'
+    - regex: 'Valencia2_Y100(?:[);/ ]|$)'
+      model: 'Valencia2 Y100'
     - regex: 'LEO_(DG280)'
       model: 'Leo $1'
     - regex: '(BL[579]000|S90C)(?:[);/ ]|$)'
@@ -5928,7 +5930,7 @@ Evolveo:
 
 # Explay
 Explay:
-  regex: 'Explay|[\w]+-EXPLAY-FIN|ActiveD[ _]|Atlant |Informer[ _][0-9]+|CinemaTV 3G|Surfer[ _][0-9\.]|sQuad[ _][0-9\.]|Onliner[1-3]|RioPlay|Leader|Pulsar|Infinityll|Imperium[78]|Indigo|Lagoon'
+  regex: 'Explay|[\w]+-EXPLAY-FIN|ActiveD[ _]|Atlant |Informer[ _][0-9]+|CinemaTV 3G|Surfer[ _][0-9\.]|sQuad[ _][0-9\.]|Onliner[1-3]|RioPlay|Leader|Pulsar|Infinityll|Imperium[78]|Indigo|Lagoon|Tornado(?! 348)(?:3G)?'
   device: 'tablet'
   models:
     - regex: 'ActiveD[ _]7.4[ _]3G'
@@ -5958,7 +5960,9 @@ Explay:
     - regex: 'Pulsar(?:[);/ ]|$)'
       device: 'smartphone'
       model: 'Pulsar'
-
+    - regex: 'Tornado(?:3G)?(?:[);/ ]|$)'
+      device: 'smartphone'
+      model: 'Tornado 3G'
     - regex: '[\w]+-EXPLAY-FIN'
       device: 'feature phone'
       model: 'Fin'
@@ -7637,7 +7641,7 @@ iHunt:
 
 # IconBIT
 IconBIT:
-  regex: 'IconBIT|NT-(3506M|0704S|0909T|1009T|10[01]1T|1017T|3601P/3602P|3603P|3702S|3805C|3905T|3701S|0701S|0805C|0902S|370[23]M)|XDS[789]4K|Omnicast UHD|Movie Smart 4K|Movie IPTV Quad'
+  regex: 'IconBIT|NT-(3506M|0704S|0909T|1009T|10[01]1T|1017T|3601P/3602P|3603P|3702S|3805C|3905T|3701S|0701S|0805C|0902S|370[23]M)|XDS[789]4K|Omnicast UHD|Movie Smart 4K|Movie IPTV Quad|TOUCAN (?:NANO|Stick) 4K'
   device: 'tablet'
   models:
     - regex: 'NT-3506M'
@@ -7678,6 +7682,12 @@ IconBIT:
     - regex: 'MATRIX ULTRA'
       model: 'NetTAB Matrix Ultra'
 
+    - regex: 'TOUCAN NANO 4K'
+      model: 'Toucan Nano 4K'
+      device: 'tv'
+    - regex: 'TOUCAN Stick 4K'
+      model: 'Toucan Stick 4K'
+      device: 'tv'
     - regex: '(?:iconBIT )?(Movie Smart 4K|Movie IPTV Quad|Movie Ultra HD 4K|XDS[789]4K|Omnicast UHD)'
       model: '$1'
       device: 'tv'
@@ -8417,7 +8427,7 @@ Kaan:
 
 # Kazam
 Kazam:
-  regex: 'Kazam|Trooper_X[0-9][0-9](?:[);/ ]|$)|Tornado 348|TROOPER 4\.0'
+  regex: 'Kazam|(?:Trooper_X[0-9][0-9]|Tornado 348|TROOPER 4\.0)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Tornado 348'
@@ -11739,7 +11749,7 @@ Odys:
 
 # Obi
 Obi:
-  regex: 'Obi[ _-]|(SJ1\.5|SJ2\.6|S400|S452\+|S451|S453|S501|S502|S503\+?|S507|S520|S550|S551|falcon)[ _]'
+  regex: 'Obi[ _-]|(SJ1\.5|SJ2\.6|(?<!verykool )S(400|452\+|45[13]|50[127]|503\+?|520|55[01])|falcon)[ _]'
   device: 'smartphone'
   models:
     - regex: 'SJ2\.6'
@@ -12392,7 +12402,7 @@ Ouki:
 
 # Overmax
 Overmax:
-  regex: 'OV-[a-z]+(?:[^;(/]*)[();/ ]|Qualcore 10(?:10|27)|Vertis 5021 Aim|OV1027[34]G'
+  regex: 'OV-[a-z]+(?:[^;(/]*)[();/ ]|Qualcore 10(?:10|27)|Vertis 5021 Aim|Vertis 4004 You|OV1027[34]G'
   device: 'tablet'
   models:
     - regex: 'OV-V10'
@@ -12400,6 +12410,9 @@ Overmax:
       device: 'smartphone'
     - regex: 'Vertis 5021 Aim'
       model: 'Vertis 5021 Aim'
+      device: 'smartphone'
+    - regex: 'Vertis 4004 You'
+      model: 'Vertis 4004 You'
       device: 'smartphone'
     - regex: 'OV-Vertis[ _-]([^;/]+) Build'
       model: 'Vertis $1'
@@ -16210,14 +16223,67 @@ Verykool:
   regex: 'verykool'
   device: 'smartphone'
   models:
-    - regex: 'verykoolS5004'
-      model: 'Lotus JR.'
-    - regex: 'verykoolS5005'
+    - regex: 'verykool[ _]?S5001'
+      model: 'Lotus'
+    - regex: 'verykool[ _]?S5004'
+      model: 'Lotus Jr'
+    - regex: 'verykool[ _]?S5007'
+      model: 'Lotus Plus'
+    - regex: 'verykool[ _]?s5015'
+      model: 'Spark II'
+    - regex: 'verykool[ _]?s5019'
+      model: 'Wave'
+    - regex: 'verykool[ _]?S5005'
       model: 'Lotus II'
-    - regex: 'verykool[ _]?([^/;]+) Build'
+    - regex: 'verykool[ _]?SL5560'
+      model: 'Maverick Pro'
+    - regex: 'verykool[ _]?SL5200'
+      model: 'Eclipse'
+    - regex: 'verykool[ _]?SL5050'
+      model: 'Phantom'
+    - regex: 'verykool[ _]?s5527'
+      model: 'Alpha Pro'
+    - regex: 'verykool[ _]?s5526'
+      model: 'Alpha'
+    - regex: 'verykool[ _]?S5525'
+      model: 'Maverick III'
+    - regex: 'verykool[ _]?S5524'
+      model: 'Maverick III Jr'
+    - regex: 'verykool[ _]?s5516'
+      model: 'Maverick Jr'
+    - regex: 'verykool[ _]?s5035'
+      model: 'Spear'
+    - regex: 'verykool[ _]?s5034'
+      model: 'Spear Jr'
+    - regex: 'verykool[ _]?s5037'
+      model: 'Apollo Quattro'
+    - regex: 'verykool[ _]?s5036'
+      model: 'Apollo'
+    - regex: 'Sol Quatro Jr'
+      model: 'Sol Quatro Jr'
+    - regex: 'verykool[ _]?s6005x'
+      model: 'Cyprus Pro'
+    - regex: 'verykool[ _]?S4006[QT]?'
+      model: 'Leo 3G'
+    - regex: 'verykool[ _]?S4007'
+      model: 'Leo IV'
+    - regex: 'verykool[ _]?s5017|Dorado s5017'
+      model: 'Dorado'
+    - regex: 'verykool[ _]?s4510'
+      model: 'Luna'
+
+    - regex: 'verykool[ _]?TL8010'
+      device: 'tablet'
+      model: 'KolorPad LTE'
+    - regex: 'verykool[ _]?T7440'
+      device: 'tablet'
+      model: 'KolorPad II'
+
+    - regex: 'verykool[ _]?(SL?[0-9]{3})(?:[);/ ]|$)'
       model: '$1'
-    - regex: 'verykool[ _]?([^/;]+);'
+    - regex: 'verykool[ _]?([^/;)]+)(?: SL?[0-9]{4}[QT]?)(?: Build|[);])'
       model: '$1'
+
 
 # Vestel (vestel.com)
 Vestel:
@@ -17981,7 +18047,7 @@ Zopo:
 
 # ZTE
 ZTE:
-  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade (?:V0820|L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|460|465|475|520|530|602)|V580|V Ultra|Q Lux)|N9[15]8St|NX(?:403A|404H|406E|40[X2]|507J|503A|505J|506J|508J|510J|512J|511J|513J|521J|523J_V1|529J|531J|541J|5[48]9J|551J|563J|569[HJ]|573J|575J|59[157]J|60[1689]J|61[12679]J|62[79]J|65[19]J|907J)|N818S|N951[0579]|N91[38]0|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:5151V|610DL|6400C|6410S|233V|331|5031O|559DL|6621O|667T|768G|792|81[25]|818L|82[08]|83[12359]|85[125]|851M|992|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(?:233|353|558|717|799|837|862|899|917|963)VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L)|V769M|Apex2|G (LTE|Lux)|Vec|Z959|V865M|Z3001S|902ZT|KIS II Max|Kis 3|K3DX-V5G|Z930L|Optus X|Blade[ _](A510|A[357] 2019-T|A6 MAX|A0622|X9)|Z3153V|Z836F|Nubia Z(?:9|11)|Ctyon-A9|602ZT|MO-01[JK]|Z963U|402ZT|P545|P609|dandelion|901ZT|A001ZT|Z-01K|UZTE V808|ZR01|ZTG01|K8[37]CA)(?:[);/ ]|$)'
+  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade (?:V0820|L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|460|465|475|520|530|602)|V580|V Ultra|Q Lux)|N9[15]8St|NX(?:403A|404H|406E|40[X2]|507J|503A|505J|506J|508J|510J|512J|511J|513J|521J|523J_V1|529J|531J|541J|5[48]9J|551J|563J|569[HJ]|573J|575J|59[157]J|60[1689]J|61[12679]J|62[79]J|65[19]J|907J)|N818S|N951[0579]|N91[38]0|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:5151V|610DL|6400C|6410S|233V|331|5031O|559DL|6621O|667T|768G|792|81[25]|818L|82[08]|83[12359]|85[125]|851M|992|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(?:233|353|558|717|799|837|862|899|917|963)VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L)|V769M|Apex2|G (LTE|Lux)|Vec|Z959|V865M|Z3001S|902ZT|KIS II Max|Kis 3|K3DX-V5G|Z930L|Optus X|Blade[ _](A510|A[357] 2019-T|A6 MAX|A0622|X9)|Z3153V|Z836F|Nubia Z(?:9|11)|Ctyon-A9|602ZT|MO-01[JK]|Z963U|402ZT|P545|P609|dandelion|901ZT|A001ZT|Z-01K|UZTE (?:GRAND V7|V808)|ZR01|ZTG01|K8[37]CA)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -18165,6 +18231,8 @@ ZTE:
       model: 'Grand X Max+'
     - regex: '(?:ZTE_)?Grand[ _]Era'
       model: 'Grand Era'
+    - regex: 'UZTE GRAND V7' # UZTE
+      model: 'Grand V7'
     - regex: 'V788D'
       model: 'Kis Plus'
     - regex: 'Z331(?:[);/ ]|$)'
@@ -18856,7 +18924,7 @@ Qumo:
 
 # Umax
 Umax:
-  regex: 'VisionBook[ _]|[78]Qa_3G(?:[);/ ]|$)'
+  regex: 'VisionBook[ _]|([78]Qa_3G|VB_10Q_Plus)(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: '(VisionBook[ _](?:10Qi|7Q[i]?|8Q[ei]?|P70|8Qi_3G)(?:[ _](?:[34]G|Plus|LTE))?)(?:[);/ ]|$)'
@@ -18865,6 +18933,8 @@ Umax:
       model: 'VisionBook $1Qa 3G'
     - regex: 'VisionBook_10Q_LTE(?:[);/ ]|$)'
       model: 'VisionBook 10Q LTE'
+    - regex: 'VB_10Q_Plus(?:[);/ ]|$)'
+      model: 'VisionBook 10Q Plus'
     - regex: 'VisionBook_P50Plus_LTE(?:[);/ ]|$)'
       device: 'smartphone'
       model: 'VisionBook P50 Plus LTE'
@@ -20464,14 +20534,18 @@ Sunstech:
 
 # Hotwav
 Hotwav:
-  regex: '(?:Venus[_ ]X1[024569]|Cosmos[ _](?:V8_lite|V19_Plus|V2[0-3]|U2|V19|V[569])|Pearl K2|Magic Q8|Magic 5 Plus|Magic (?:[89]|1[13])|Hot[_ ]6)(?:[);/ ]|$)'
+  regex: '(?:Venus[_ ](?:X1|X1[0245679]|R8 PLUS|R[236-9]|R1[028])|Cosmos[ _](?:V8_lite|V19_Plus|V2[0-3]|U2|V19|V[569])|Pearl K2|Magic Q8|Magic 5 Plus|Magic (?:[89]|1[13])|Hot[_ ]6)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Cosmos[ _]V8_lite(?:[);/ ]|$)'
       model: 'Cosmos V8 Lite'
     - regex: 'Hot[_ ]6?(?:[);/ ]|$)'
       model: 'Hot 6'
-    - regex: '(Venus[_ ]X1[024569]|Cosmos[ _](?:V19_Plus|V2[0-3]|U2|V19|V[569])|Pearl K2|Magic Q8|Magic 5 Plus|Magic (?:[89]|1[13]))(?:[);/ ]|$)'
+    - regex: 'Venus R8 PLUS(?:[);/ ]|$)'
+      model: 'Venus R8 Plus'
+    - regex: 'Venus[_ ](X1|X1[0245679]|R[236-9]|R1[028])(?:[);/ ]|$)'
+      model: 'Venus $1'
+    - regex: '(Cosmos[ _](?:V19_Plus|V2[0-3]|U2|V19|V[569])|Pearl K2|Magic Q8|Magic 5 Plus|Magic (?:[89]|1[13]))(?:[);/ ]|$)'
       model: '$1'
 
 # Tetratab
